--- a/MusicFarmer.Data/MediaFarmer.Data.csproj
+++ b/MusicFarmer.Data/MediaFarmer.Data.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Artist.cs">
       <DependentUpon>MusicFarmer.tt</DependentUpon>
     </Compile>
+    <Compile Include="AuditLog.cs">
+      <DependentUpon>MusicFarmer.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AuditLogDetail.cs">
+      <DependentUpon>MusicFarmer.tt</DependentUpon>
+    </Compile>
     <Compile Include="Comment.cs">
       <DependentUpon>MusicFarmer.tt</DependentUpon>
     </Compile>
